1998-11-29  Jochen Wiedmann  <joe@ispsoft.de> (0.1117)

	* lib/HTML/EP.pm (new): Added $self->{'_ep_config'}.
	* lib/HTML/EP.pm (_ep_mail): Added debugging mode. Requested by
          Michael Bauer (michael@h-net.com).
	* Added lib/HTML/EP/Examples/Admin.pm and examples/admin/squid.ep.

1998-11-04  Jochen Wiedmann  <joe@ispsoft.de> (0.1116)

	* lib/HTML/EP.pm (_ep_input): Added type 's' (Set).
	* lib/HTML/EP.pm (_ep_query): Added resulttype single_array
	  and single_hash.

1998-11-03  Jochen Wiedmann  <joe@ispsoft.de> (0.1115)

	* lib/HTML/EP.pm (_ep_package): Changed $self->init() to
	  $self->init($attr).

1998-10-27  Jochen Wiedmann  <joe@ispsoft.de> (0.1114)

	* Added HTML::EP::Session::Cookie and $self->{'_ep_cookies'}.
	* ep.cgi.PL: Fixed 'debughosts' handling to use $ENV{REMOTE_ADDR}
	  and not $ENV{REMOTE_HOST}.
	* ep.cgi.PL: Error messages have been reported incorrect when
	  setting errhandler.
	* examples/admin: Added mail2group.ep and mail2group.

1998-10-19  Jochen Wiedmann  <joe@ispsoft.de> (0.1113)

	* Added HTML::EP::Shop and examples/shop (To be finished).

1998-10-13  Jochen Wiedmann  <joe@ispsoft.de> (0.1112)

	* lib/HTML/EP/Locale.pm (init): Fixed typo in default language.
	* Added examples/admin.
	* Added examples/edit.ep.

1998-10-13  Jochen Wiedmann  <joe@ispsoft.de> (0.1111)

	* ep-error mismatched user and system error.
 	* ep-error was not looking in DOCUMENT_ROOT.
 	* Added optional removal of selfloader code.
	* Added HTML::EP::Config and Bundle::HTML::EP.
	* Added debughosts and ok_templates to Config.

1998-10-11  Jochen Wiedmann  <joe@ispsoft.de> (0.1110)
  
      * lib/HTML/EP/Locale.pm: Made default language configurable.
      * Added $&NBSP->var$

1998-10-06  Jochen Wiedmann  <joe@ispsoft.de> (0.1109)

	* EP.pm.in (_ep_mail): Requires MailTools 1.12 now.

1998-09-17  Jochen Wiedmann  <joe@ispsoft.de> (0.1108)

	* lib/HTML/EP/Locale.pm (_ep_language): Added debugging.
	* lib/HTML/EP/Session.pm (store): Now using bind_param() for